# capnproto_shm_transport

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  bazel-bin  bazel-capnproto_shm_transport  bazel-out  bazel-testlogs  capnproto_shm_transport.cpp  capnproto_shm_transport.hpp  main.cpp
