module(
    name = "capnproto_shm_transport",
    version = "0.0.1",
)

bazel_dep(name = "capnp-cpp", version = "1.1.0")
bazel_dep(name = "boost.interprocess", version = "1.87.0")
bazel_dep(name = "boost.asio", version = "1.87.0.bcr.1")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.0")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.31",  # glibc (choose one)
    "@zig_sdk//toolchain:linux_amd64_musl",      # musl
)